--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
     "name": "ramzes-ts",
     "version": "0.2.0",
-    "private": false,
+    "private": true,
     "scripts": {
         "test": "npx wdio wdio.selenoid.conf.ts",
         "spec": "wdio --spec ./test/specs/$FILE",
         "grep": "npm run test -- --mochaOpts.grep",
         "report": "allure generate --clean allure-results && allure open"
     },
+    
     "devDependencies": {
         "@types/supertest": "^2.0.12",
         "@wdio/allure-reporter": "^7.20.7",
@@ -27,5 +28,10 @@
         "wdio-selenoid-standalone-service": "^1.0.0",
         "wdio-slack-service": "^2.0.9",
         "wdio-ui5-service": "^0.7.0"
-    }
+    },
+    "engines" : { 
+          "node" : "15.5.0",
+          "npm" :  "7.3.0"
+        }
+        
 }
